kubernetes/kafka-producer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  namespace: backend
  labels:
    app: kafka-producer
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
        - name: kafka-producer
          image: demo-nestjs/kafka-producer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      app: kafka-producer
