kubernetes/kafka-producer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
  namespace: backend
spec:
  selector:
    app: kafka-producer
  ports:
    - name: http
      port: 3000
      targetPort: 3000
