kubernetes/kafka-producer/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-producer
  namespace: backend
spec:
  hosts:
    - "api.backend.com"
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /kafka-producer/
      rewrite:
        uri: /
      route:
        - destination:
            host: kafka-producer
            port:
              number: 3000
